--- a/dev/blocks/nav/nav.pug
+++ b/dev/blocks/nav/nav.pug
@@ -48,6 +48,8 @@ mixin nav(isSide)
 		.nav__item
 			a.nav__link(href= pageAddress + '/reviews.html') Отзывы
 		.nav__item
+			a.nav__link(href= pageAddress + '/video.html') Видео
+		.nav__item
 			a.nav__link(href= pageAddress + '/contacts.html') Контакты
 
 mixin navSide
@@ -60,5 +62,7 @@ mixin navSide
 			a.nav__link(href= pageAddress + '/services.html') Услуги
 		.nav__item
 			a.nav__link(href= pageAddress + '/reviews.html') Отзывы
+		.nav__item
+			a.nav__link(href= pageAddress + '/video.html') Видео
 		.nav__item
 			a.nav__link(href= pageAddress + '/contacts.html') Контакты
