--- a/dev/pug/layout__part_footer.pug
+++ b/dev/pug/layout__part_footer.pug
@@ -38,6 +38,11 @@
 								]
 							)
 					.footer-grid__item
+						.footer-unit
+							a.footer-unit__title(href='/reviews.html') Отзывы
+						.footer-unit
+							a.footer-unit__title(href='/video.html') Видео
+					.footer-grid__item
 						+footer-unit('Контакты')
 							.footer-contacts
 								.footer-contacts__item
