--- a/dev/pug/mixins.pug
+++ b/dev/pug/mixins.pug
@@ -21,3 +21,4 @@ include ../blocks/subheader/subheader.pug
 include ../blocks/subnav/subnav.pug
 include ../blocks/vacancy-list-tiles/vacancy-list-tiles.pug
 include ../blocks/vacancy-tiles/vacancy-tiles.pug
+include ../blocks/video-tile/video-tile.pug
