--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -56,6 +56,8 @@
 @import "dev/blocks/vacancy-list-tiles/vacancy-list-tiles.scss";
 @import "dev/blocks/vacancy-tiles/vacancy-tiles.scss";
 @import "dev/blocks/video/video.scss";
+@import "dev/blocks/video-grid/video-grid.scss";
+@import "dev/blocks/video-tile/video-tile.scss";
 @import "dev/blocks/welcome/welcome.scss";
 
 /*!*
