--- a/dev/blocks/footer-grid/footer-grid.scss
+++ b/dev/blocks/footer-grid/footer-grid.scss
@@ -11,30 +11,34 @@
 		grid-template-areas:
 				'logo logo'
 				'about catalog'
-				'about reviews-video'
+				'about reviews'
+				'about video'
 				'services contacts';
 	}
 	@media (min-width: $screen-md) {
 		grid-template-columns: 1fr 1fr 1fr;
 		grid-template-areas:
 				'logo logo logo'
+				'about catalog reviews'
+				'about catalog video'
 				'about catalog contacts'
-				'about services contacts'
-				'reviews-video services contacts';
+				'about services contacts';
 	}
 	@media (min-width: $screen-lg) {
 		grid-template-columns: 1fr 1fr 1fr 1fr;
 		grid-template-areas:
+				'logo about catalog reviews'
+				'logo about catalog video'
 				'logo about catalog contacts'
-				'logo about services contacts'
-				'logo reviews-video services contacts';
+				'logo about services contacts';
 	}
 	@media (min-width: $screen-xl) {
 		grid-gap: 32px 60px;
 		grid-template-columns: 192px 180px 240px 180px 208px;
 		grid-template-areas:
 				'logo about catalog services contacts'
-				'logo about reviews-video services contacts';
+				'logo about reviews services contacts'
+				'logo about video services contacts';
 	}
 	&__item {
 		@media (min-width: $screen-sm) {
@@ -51,9 +55,12 @@
 				grid-area: services;
 			}
 			&:nth-child(5) {
-				grid-area: reviews-video;
+				grid-area: reviews;
 			}
 			&:nth-child(6) {
+				grid-area: video;
+			}
+			&:nth-child(7) {
 				grid-area: contacts;
 			}
 		}
