--- a/dev/pug/layout__part_footer.pug
+++ b/dev/pug/layout__part_footer.pug
@@ -40,6 +40,7 @@
 					.footer-grid__item
 						.footer-unit
 							a.footer-unit__title(href='/reviews.html') Отзывы
+					.footer-grid__item
 						.footer-unit
 							a.footer-unit__title(href='/video.html') Видео
 					.footer-grid__item
