--- a/dev/pages/reviews.pug
+++ b/dev/pages/reviews.pug
@@ -12,11 +12,32 @@ block pageMain
 					+reviews(
 						[
 							{
+
+								slide: [
+									{
+										imgLarge: 'img__license_l',
+										img: 'img__license',
+									},
+									{
+										imgLarge: 'img__license_l',
+										img: 'img__license',
+									},
+									{
+										imgLarge: 'img__license_l',
+										img: 'img__license',
+									}
+								],
 								title: 'ООО «Рога и копыта»',
 								time: 'Май 2021 года',
 								task: 'Узнать почему Машка так и не телится! Но стремящиеся вытеснить традиционное производство, нанотехнологии представляют собой не что иное, как квинтэссенцию победы маркетинга над разумом и должны быть объединены в целые кластеры себе подобных.'
 							},
 							{
+								slide: [
+									{
+										imgLarge: 'img__license_l',
+										img: 'img__license',
+									}
+								],
 								title: 'ООО «Альфа»',
 								time: 'Июнь 2021 года',
 								task: 'В рамках спецификации современных стандартов, предприниматели в сети интернет, инициированные исключительно синтетически, описаны максимально подробно. Активно развивающиеся страны третьего мира набирают популярность среди определенных слоев населения, а значит, должны быть преданы социально-демократической анафеме. Прежде всего, консультация с широким активом говорит о возможностях вывода текущих активов.'
