--- a/dev/pages/reviews.pug
+++ b/dev/pages/reviews.pug
@@ -19,12 +19,12 @@ block pageMain
 										img: 'img__license',
 									},
 									{
-										imgLarge: 'img__license_l',
-										img: 'img__license',
+										imgLarge: 'img__license_l_2',
+										img: 'img__license_2',
 									},
 									{
-										imgLarge: 'img__license_l',
-										img: 'img__license',
+										imgLarge: 'img__license_l_3',
+										img: 'img__license_3',
 									}
 								],
 								title: 'ООО «Рога и копыта»',
