--- a/dev/pages/production.pug
+++ b/dev/pages/production.pug
@@ -34,6 +34,13 @@ block pageMain
 								isDescr: false,
 								descr: 'Залогом здоровья и продуктивности коров, роста прибыли и устойчивого развития бизнеса является сбалансированное кормление',
 								img: 'calf',
+							},
+							{
+								class: 'light',
+								title: 'Консервант',
+								isDescr: false,
+								descr: '',
+								img: 'rye',
 							}
 						]
 					)
