--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -36,6 +36,7 @@
 @import "dev/blocks/popup/popup.scss";
 @import "dev/blocks/prod/prod.scss";
 @import "dev/blocks/prod-grid/prod-grid.scss";
+@import "dev/blocks/prod-slider/prod-slider.scss";
 @import "dev/blocks/prod-tabs/prod-tabs.scss";
 @import "dev/blocks/prod-tabs-content/prod-tabs-content.scss";
 @import "dev/blocks/prod-tiles/prod-tiles.scss";
